--- a/src/Winhance.UI/App.xaml
+++ b/src/Winhance.UI/App.xaml
@@ -15,6 +15,8 @@
                 <ResourceDictionary Source="ms-appx:///Features/Common/Resources/Converters.xaml" />
                 <!-- Shared setting templates and styles -->
                 <ResourceDictionary Source="ms-appx:///Features/Common/Resources/SettingTemplates.xaml" />
+                <!-- Centralized feature icons -->
+                <ResourceDictionary Source="ms-appx:///Features/Common/Resources/FeatureIcons.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
             <!-- Title Bar Button Style -->
